--- a/AIImageStoreServer/appsettings.json
+++ b/AIImageStoreServer/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "OpenAIKey": "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",
   "ConnectionStrings": {
-    "dbConnection": "server=localhost;database=ai_image_store;user=root;password="
+    "dbConnection": "server=localhost;database=aiimagestore;user=root;password="
   }
 }
